fix wrapping on small screens

--- a/src/components/CreditList.module.css
+++ b/src/components/CreditList.module.css
@@ -55,10 +55,6 @@
 }
 
 @media (--reduced) {
-  .description {
-    width: 100%;
-  }
-
   .red .credit,
   .cyan .credit {
     background-color: white;
